added all files

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "secure-web-access-proxy_v5",
+  "name": "secure-web-proxy",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Secure Web Access Proxy for Legacy Video Appliances",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "connect-pg-simple": "^10.0.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1"
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.7.3",
+    "speakeasy": "^2.0.0"
   }
 }
